# fast_auto_scRNA

./: .gitattributes  .gitignore  DOWNSTREAM_ROADMAP.md  HANDOFF.md  INSTALL.md  LICENSE  README.md  ROADMAP.md  UPDATE.md  pyproject.toml  setup.sh
benchmarks/: assemble_pancreas_h5ad.py  bench_fastmnn.py  bench_leiden.py  bench_phase2b_champ_222k.py  bench_phase2b_two_stage_222k.py  bench_scvi_gpu.py  bench_stability_picker.py  compare_pickers_pancreas.py  diagnose_asw.py  diagnose_silhouette.py  first_plateau_designer.py  inspect_atlas_h5ad.py  knee_picker_pancreas.py  plot_champ_vs_knee_222k.py  plot_from_h5ad.py  prototype_embedding_silhouette_picker.py  prototype_silhouette_alts.py  rda_to_h5ad.R  recluster_222k.py  regen_v2p12_deliverable_plots.py  smoke_222k.py  smoke_pancreas.py  validate_scib_parallel_222k.py  verify_conductance_222k.py  verify_leiden_mp.py
docs/superpowers/plans/: 2026-04-22-recall-mandatory-oom.md
docs/superpowers/specs/: 2026-04-22-recall-mandatory-oom-design.md
fast_auto_scrna/: __init__.py  config.py  runner.py
fast_auto_scrna/_native/: __init__.py
fast_auto_scrna/cluster/: __init__.py  champ.py  leiden.py  resolution.py
fast_auto_scrna/common/: __init__.py
fast_auto_scrna/integration/: __init__.py  bbknn.py  fastmnn.py  harmony.py  scvi_route.py
fast_auto_scrna/io/: __init__.py  qc.py
fast_auto_scrna/neighbors/: __init__.py  knn_fuzzy.py
fast_auto_scrna/pca/: __init__.py  randomized.py
fast_auto_scrna/plotting/: __init__.py  comparison.py
fast_auto_scrna/preprocess/: __init__.py  hvg.py  normalize.py  scale.py
fast_auto_scrna/rogue/: __init__.py  core.py  score.py
fast_auto_scrna/scib_metrics/: __init__.py  sccaf.py  scib.py
fast_auto_scrna/umap/: __init__.py  layout.py
rust/: Cargo.toml
rust/crates/kernels/: Cargo.toml
rust/crates/kernels/src/: fuzzy.rs  lib.rs  silhouette.rs  umap.rs
rust/crates/kernels/src/harmony/: cluster.rs  linalg.rs  matmul.rs  mod.rs  state.rs
rust/crates/kernels/src/metrics/: graph_conn.rs  lisi.rs
rust/crates/py_bindings/: Cargo.toml  pyproject.toml
rust/crates/py_bindings/src/: bbknn.rs  fuzzy.rs  harmony.rs  lib.rs  metrics.rs  pca.rs  rogue.rs  silhouette.rs  umap.rs
scatlas/: .gitignore  Cargo.toml  README.md  justfile
scatlas/benchmark/: full_pipeline.py  m1_validation.py  m2_validation.py  m4_harmony.py  m5_pca.py  m7_umap.py
scatlas/crates/scatlas-core/: Cargo.toml
scatlas/crates/scatlas-core/src/: bbknn.rs  lib.rs  pca.rs  umap.rs
scatlas/crates/scatlas-core/src/harmony/: correct.rs  kmeans_init.rs
scatlas/crates/scatlas-core/src/metrics/: kbet.rs  mod.rs
scatlas/crates/scatlas-core/src/stats/: knockoff.rs  mod.rs  rogue.rs  wilcoxon.rs
scatlas/crates/scatlas-py/: Cargo.toml  pyproject.toml
scatlas/crates/scatlas-py/python/scatlas/: __init__.py  ext.py  metrics.py  pp.py  stats.py  tl.py
scatlas/crates/scatlas-py/src/: ext.rs  fuzzy.rs  harmony.rs  lib.rs  metrics.rs  pca.rs  stats.rs  umap.rs
scatlas/python/tests/: test_bbknn_parity.py  test_harmony.py  test_metrics_parity.py  test_pca_parity.py  test_stats_parity.py  test_umap.py
scatlas_pipeline/: README.md  __init__.py  pipeline.py  silhouette.py
scatlas_pipeline/benchmarks/: ablate_harmony.py  compare_panc8_full.py  compare_pancreas_sub.py  e2e_pancreas_sub.py  parity_pancreas_umap.py  recall_oom_157k.py  recall_oom_222k_prostate.py  run_157k.py  silhouette_smoke_222k.py
scatlas_pipeline/configs/: epithelia_157k.yaml
scripts/: assemble_h5ad.py  convert_qs_to_h5ad.R
scvalidate_rewrite/: README.md  install_wsl_to_f.ps1  install_wsl_to_f_v2.ps1  pyproject.toml
scvalidate_rewrite/benchmark/: bench_results.md  cells.tsv  compare_epithelia.py  debug_fit_model_R.R  debug_rhos_spectra.py  debug_scshc.py  debug_scshc_R.R  debug_scshc_R_detailed.R  debug_scshc_py_detailed.py  export.R  export_epithelia.R  inspect.R  inspect_out.txt  install_aoom_win.bat  install_recall.R  install_recall_v2.R  install_recall_v3.R  install_scop.R  metadata_head.txt  plot_umap.py  profile_hotspots.py  rogue_R.csv  run_epithelia_R.R  run_epithelia_py.py  run_recall_R_only.R  run_rogue_R.R  run_scshc_R.R  run_scvalidate.py  scshc_R.csv  scvalidate_report.csv  scvalidate_timing.json
scvalidate_rewrite/docs/: v0.4_rust_plan.md
scvalidate_rewrite/pr_anndata_oom/: PR_NOTES.md  README_windows_patch.md  install_windows.bat  wheels.yml
scvalidate_rewrite/scvalidate/: __init__.py
scvalidate_rewrite/scvalidate/fuse/: __init__.py  report.py
scvalidate_rewrite/scvalidate/io/: __init__.py  anndata_adapter.py
scvalidate_rewrite/scvalidate/recall_py/: __init__.py  _oom_backend.py  comparison.py  core.py  knockoff.py
scvalidate_rewrite/scvalidate/rogue_py/: __init__.py  core.py
scvalidate_rewrite/scvalidate/scshc_py/: __init__.py  core.py
scvalidate_rewrite/scvalidate_rust/: .gitignore  Cargo.toml  pyproject.toml
scvalidate_rewrite/scvalidate_rust/src/: knockoff.rs  lib.rs  wilcoxon.rs
scvalidate_rewrite/tests/: test_fuse.py  test_knockoff.py  test_oom_write_augmented.py  test_recall_comparison_report.py  test_recall_comparison_unit.py  test_recall_core.py  test_recall_oom_memory.py  test_recall_oom_parity.py  test_rogue.py  test_rust_wilcoxon_parity.py  test_scshc_orchestrator.py  test_scshc_utilities.py  test_silhouette_optimizer.py  test_wilcoxon_pair_chunked.py
tests/: test_conductance_optimizer.py  test_knee_picker.py  test_leiden_parallel_consistency.py  test_silhouette_consistency.py  test_smoke.py
