[workspace]
resolver = "2"
members = [
    "crates/scatlas-core",
    "crates/scatlas-py",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["scatlas contributors"]
license = "MIT"
repository = "https://github.com/scatlas/scatlas"
rust-version = "1.75"

[workspace.dependencies]
pyo3 = { version = "0.24", features = ["extension-module", "abi3-py310"] }
numpy = "0.24"
ndarray = "0.16"
rayon = "1.10"
libm = "0.2"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.bench]
opt-level = 3
lto = "thin"
