[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scvalidate"
version = "0.1.0.dev0"
description = "Automated single-cell clustering validation: recall + sc-SHC + ROGUE fused"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "scvalidate contributors"}]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "pandas>=2.0",
    "statsmodels>=0.14",
    "scanpy>=1.10",
    "anndata>=0.10",
    "leidenalg>=0.10",
    "python-igraph>=0.11",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
loess = ["scikit-misc>=0.3"]
dev = ["pytest>=7", "pytest-cov", "ruff"]

[tool.setuptools.packages.find]
where = ["."]
include = ["scvalidate*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
