[package]
name = "scvalidate_rust"
version = "0.1.0"
edition = "2021"
authors = ["scvalidate contributors"]
description = "Rust acceleration kernels for scvalidate (Wilcoxon rank-sum, knockoff threshold)"
license = "MIT"

[lib]
name = "scvalidate_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24", features = ["extension-module", "abi3-py310"] }
numpy = "0.24"
ndarray = "0.16"
rayon = "1.10"
libm = "0.2"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
