[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "scvalidate-rust"
version = "0.1.0"
description = "Rust acceleration kernels for scvalidate"
requires-python = ">=3.10"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.maturin]
module-name = "scvalidate_rust"
features = ["pyo3/extension-module"]
