[package]
name = "scatlas-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Pure-Rust kernels for scatlas: preprocessing, integration, metrics, robust stats"

[lib]
name = "scatlas_core"
crate-type = ["rlib"]

[dependencies]
ndarray = { workspace = true, features = ["rayon"] }
rayon = { workspace = true }
libm = { workspace = true }
hnsw_rs = "0.3.4"
