[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "scatlas"
version = "0.1.0"
description = "Rust-first scRNA-seq atlas computation package"
readme = "../../README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "scatlas contributors" }]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
]

[project.optional-dependencies]
test = ["pytest>=8", "scanpy>=1.10"]

[tool.maturin]
python-source = "python"
module-name = "scatlas._scatlas_native"
features = ["pyo3/extension-module"]
